Bug 1324499 - Save and restore scroll position after reflow in GetContentSizeInternal. r=dbaron, a=gchang

The bug is caused by the first call to ResizeReflow in
nsDocumentViewer::GetContentSizeInternal, which reflows the content with
unlimited height. ResizeReflow calls DidDoReflow, which calls a
callback installed by nsHTMLScrollFrame that clamps the scroll port setting
the scroll top to 0 and losing the original scroll top. When the content
is reflowed again to the maximum height, the scroll top stays at 0.

MozReview-Commit-ID: 3VkgWLqSTDP