layout/base/nsDocumentViewer.cpp
@@ -3568,6 +3568,13 @@ nsDocumentViewer::GetContentSizeInternal(int32_t* aWidth, int32_t* aHeight,
     prefWidth = aMaxWidth;
   }
 
+  nsAutoPtr<nsPresState> frameState;
+  nsIScrollableFrame *scrollFrame = presShell->GetRootScrollFrameAsScrollable();
+  nsIStatefulFrame *statefulFrame = do_QueryFrame(scrollFrame);
+  if (statefulFrame) {
+    statefulFrame->SaveState(getter_Transfers(frameState));
+  }
+
   nsresult rv = presShell->ResizeReflow(prefWidth, NS_UNCONSTRAINEDSIZE);
   NS_ENSURE_SUCCESS(rv, rv);
 
@@ -3583,6 +3590,12 @@ nsDocumentViewer::GetContentSizeInternal(int32_t* aWidth, int32_t* aHeight,
     NS_ENSURE_SUCCESS(rv, rv);
 
     shellArea = presContext->GetVisibleArea();
+
+    // the first reflow reset our scroll, now set it back
+    if (frameState && presShell->GetRootScrollFrameAsScrollable() == scrollFrame) {
+      statefulFrame->RestoreState(frameState);
+      scrollFrame->ScrollToRestoredPosition();
+    }
   }
 
   // Protect against bogus returns here
